<resources>
    <string name="app_name">CatalogingMtgCards</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="extended_fab_content_desc">novo deck</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="radio_btn_opt_white">Branco</string>
    <string name="radio_btn_opt_red">Vermelho</string>
    <string name="radio_btn_opt_green">Verde</string>
    <string name="radio_btn_opt_blue">Azul</string>
    <string name="radio_btn_opt_black">Preto</string>

    <string name="email_or_senha_incorrect">email ou senha esta incorreto</string>
    <string name="e_mail_or_password_empty">campo de email e senha nao pode estar vazio</string>
    <string name="unknown_error">Erro desconhecido </string>
    <string name="fail_auth">falha na autenticacao</string>
    <string name="email_required">campo do email não pode estar vazio</string>
    <string name="password_required">Campo da senha não pode estar vazio</string>
</resources>