<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.DialogFilterColor">
    <RadioGroup
        android:id="@+id/filter_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <RadioButton
            android:id="@+id/btn_radio_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:text="@string/radio_btn_opt_white"
            android:buttonTint="@color/purple"
            android:textColor="@color/font_color_card"
            android:textSize="14sp" />
        <RadioButton
            android:id="@+id/btn_radio_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:text="@string/radio_btn_opt_red"
            android:buttonTint="@color/purple"
            android:textColor="@color/font_color_card"
            android:textSize="14sp" />
        <RadioButton
            android:id="@+id/btn_radio_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:text="@string/radio_btn_opt_green"
            android:buttonTint="@color/purple"
            android:textColor="@color/font_color_card"
            android:textSize="14sp" />
        <RadioButton
            android:id="@+id/btn_radio_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:text="@string/radio_btn_opt_blue"
            android:buttonTint="@color/purple"
            android:textColor="@color/font_color_card"
            android:textSize="14sp" />
        <RadioButton
            android:id="@+id/btn_radio_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:text="@string/radio_btn_opt_black"
            android:buttonTint="@color/purple"
            android:textColor="@color/font_color_card"
            android:textSize="14sp" />
    </RadioGroup>
</LinearLayout>